--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:name=".Database"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/fidyahapp"
         android:label="@string/app_name"
         android:roundIcon="@drawable/fidyahapp"
