--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'fidyah'
+            keyPassword '123456'
+            storeFile file('C:/Users/alhaa/Desktop/FreeLance/FidyahApp_Customer/signed/fidyah.jks')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 28
-
     defaultConfig {
         applicationId "com.example.user.fidyahapp"
         minSdkVersion 16
@@ -17,12 +24,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+        debug {
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:multidex:1.0.3'
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -41,7 +51,6 @@ dependencies {
     implementation 'com.firebase:firebase-client-android:2.5.2'
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-database:12.0.1'
-
 }
 // Add to the bottom of the file
 apply plugin: 'com.google.gms.google-services'
